Added ability to mark questions as required

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ nbproject/project.xml
 nbproject/project.properties
 
 *.png
+
+media/uploads/140558755653c7906488269.
+
+media/uploads/140558078653c775f225e14.
+
+media/uploads/140558757253c79074737fd.
+
+media/uploads/140558758253c7907e36cc5.
